build: enable New Architecture and install device-info

--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "ios-dev": "npx react-native run-ios --simulator=\"iPhone 16\"",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "pod-install": "cd ios && RCT_NEW_ARCH_ENABLED=1 bundle exec pod install && cd .."
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-native": "0.75.3",
+    "react-native-device-info": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
