chore: implement design system based on shadcn ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,19 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["./src/components/*"],
+      "@screens/*": ["./src/screens/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@constants/*": ["./src/constants/*"],
+      "@customTypes/*": ["./src/types/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@services/*": ["./src/services/*"],
+      "@config": ["./src/config"],
+      "@languages/*": ["./src/languages/*"],
+      "@redux/*": ["./src/redux/*"]
+    }
+  }
 }
