--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "luxon": "^3.5.0",
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-device-info": "^13.0.0",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-reanimated": "^3.15.3",
     "react-native-safe-area-context": "^4.11.0",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "3.35.0-rc.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -31,6 +32,7 @@
     "@react-native/eslint-config": "0.75.3",
     "@react-native/metro-config": "0.75.3",
     "@react-native/typescript-config": "0.75.3",
+    "@types/luxon": "^3.4.2",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
