--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "ios-dev": "npx react-native run-ios --simulator=\"iPhone 16\"",
+    "ios-dev": "ENVFILE=.env.dev npx react-native run-ios --simulator=\"iPhone 16\"",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
@@ -18,6 +18,7 @@
     "luxon": "^3.5.0",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-config": "^1.5.3",
     "react-native-device-info": "^13.0.0",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-reanimated": "^3.15.3",
